--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSON Data Display</title>
+    <title>Covid-19 Updates</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -22,29 +22,47 @@
     </style>
 </head>
 <body>
-    <h1>JSON Data Display</h1>
+    <h1>Covid-19 Updates</h1>
     <div id="jsonData" class="json-container">
         Loading JSON data...
     </div>
 
     <script>
-        // Example JSON data
-        const jsonData = {
-            "cases": 123456,
-            "deaths": 7890,
-            "recovered": 54321
-        };
-
-        // Function to display JSON data
-        function displayJsonData(data) {
-            const jsonDataDiv = document.getElementById('jsonData');
-            jsonDataDiv.innerHTML = `<pre>${JSON.stringify(data, null, 2)}</pre>`;
+        async function fetchData() {
+            try {
+                const response = await fetch("https://berlinshaju.github.io/python_projects/");
+                const data = await response.json();
+                displayJsonData(data);
+            } catch (error) {
+                console.error("Error fetching data:", error);
+                document.getElementById('jsonData').innerHTML = "Error loading data.";
+            }
         }
 
-        // Display the JSON data when the page loads
-        document.addEventListener('DOMContentLoaded', (event) => {
-            displayJsonData(jsonData);
-        });
+        function displayJsonData(data) {
+            const text = `Confirmed Cases: ${data.cases}\nDeaths: ${data.deaths}\nRecovered: ${data.recovered}`;
+            const jsonDataDiv = document.getElementById('jsonData');
+            jsonDataDiv.innerHTML = `<pre>${text}</pre>`;
+            // Show a browser notification
+            if (Notification.permission === "granted") {
+                new Notification("Covid-19 Updates", { body: text });
+            }
+        }
+
+        // Request notification permission
+        if (Notification.permission !== "granted") {
+            Notification.requestPermission().then(permission => {
+                if (permission === "granted") {
+                    fetchData(); // Fetch data initially if permission is granted
+                }
+            });
+        }
+
+        // Fetch data initially
+        fetchData();
+
+        // Update data every 60 seconds
+        setInterval(fetchData, 60000);
     </script>
 </body>
 </html>
